feat: add balances api
