# docs/swagger.json
@@ -18,6 +18,38 @@
     "host": "localhost:8000",
     "basePath": "/api",
     "paths": {
+        "/balances": {
+            "get": {
+                "description": "get balances for a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "balances"
+                ],
+                "summary": "Get Balances",
+                "responses": {
+                    "200": {
+                        "description": "Returns user balances",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ledger.Balance"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/queries": {
             "get": {
                 "description": "get queries for a user",
@@ -160,6 +192,17 @@
         }
     },
     "definitions": {
+        "ledger.Balance": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "string"
+                },
+                "balance": {
+                    "type": "string"
+                }
+            }
+        },
         "main.Error": {
             "type": "object",
             "properties": {
